@@ -1,6 +1,7 @@
 share/gphotoframe.desktop.in
 share/gphotoframe-screensaver.desktop.in
 share/gphotoframe.glade
+share/gphotoframe.schemas.in
 lib/menu.py
 lib/preferences.py
 lib/plugins/base.py
